git-crypt: fix config

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-*crypt.nix filter=git-crypt
+*crypt.nix filter=git-crypt diff=git-crypt
+modules/core/taskchampion-crypt.nix filter=git-crypt diff=git-crypt
