--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *crypt.nix filter=git-crypt diff=git-crypt
+modules/home/winapps/compose.yaml filter=git-crypt diff=git-crypt
 modules/core/taskchampion-crypt.nix filter=git-crypt diff=git-crypt
